ext/standard/url_parser_ex.c
/* Generated by re2c 0.16 */
#line 1 "ext/standard/url_parser_ex.re"
/*
   +----------------------------------------------------------------------+
   | PHP Version 7                                                        |
   +----------------------------------------------------------------------+
   | Copyright (c) 1997-2016 The PHP Group                                |
   +----------------------------------------------------------------------+
   | This source file is subject to version 3.01 of the PHP license,      |
   | that is bundled with this package in the file LICENSE, and is        |
   | available through the world-wide-web at the following url:           |
   | http://www.php.net/license/3_01.txt                                  |
   | If you did not receive a copy of the PHP license and are unable to   |
   | obtain it through the world-wide-web, please send a note to          |
   | license@php.net so we can mail you a copy immediately.               |
   +----------------------------------------------------------------------+
   | Author: David Walker (dave@mudsite.com)                              |
   +----------------------------------------------------------------------+
 */

#include <stdlib.h>
#include <signal.h>
#include <string.h>
#include <ctype.h>
#include <sys/types.h>

#include "php.h"
#include "url.h"

#line 34 "ext/standard/url_parser_ex.re"


#define get_token(dest, m, c) {                     \
    int len = (c) - (m);                            \
    dest = (char*)emalloc(len + 1);                 \
    memcpy(dest, (m), len);                         \
    dest[len] = '\0';                               \
}

/*
*/

PHPAPI php_url *php_rfc_url_parse(unsigned char *str, size_t slen, zend_long rfcv)
{
	php_url *ret = (php_url*)ecalloc(1, sizeof(php_url));
    unsigned char *m, *c, *YYMARKER;
    c = str;

    #line 141 "ext/standard/url_parser_ex.re"


    m = c;
    
#line 55 "ext/standard/url_parser_ex.c"
{
	unsigned char yych;
	static const unsigned char yybm[] = {
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0, 128, 128, 128, 128,   0, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128,   0,   0,   0,   0,   0,   0, 
		  0, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128,   0,   0,   0,   0,   0, 
		  0, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
	};
	yych = *(YYMARKER = c);
	if (yych <= 'Z') {
		if (yych <= 0x00) goto yy3;
		if (yych >= 'A') goto yy5;
	} else {
		if (yych <= '`') goto yy2;
		if (yych <= 'z') goto yy5;
	}
yy2:
#line 146 "ext/standard/url_parser_ex.re"
	{ c = m; goto hier_part; }
#line 103 "ext/standard/url_parser_ex.c"
yy3:
	++c;
#line 145 "ext/standard/url_parser_ex.re"
	{ goto end; }
#line 108 "ext/standard/url_parser_ex.c"
yy5:
	++c;
	yych = *c;
	if (yybm[0+yych] & 128) {
		goto yy5;
	}
	if (yych <= '/') goto yy7;
	if (yych <= ':') goto yy8;
yy7:
	c = YYMARKER;
	goto yy2;
yy8:
	++c;
#line 147 "ext/standard/url_parser_ex.re"
	{
        get_token(ret->scheme, m, c - 1);
        goto hier_part;
      }
#line 127 "ext/standard/url_parser_ex.c"
}
#line 151 "ext/standard/url_parser_ex.re"


hier_part:
    m = c;
    
#line 135 "ext/standard/url_parser_ex.c"
{
	unsigned char yych;
	yych = *(YYMARKER = c);
	if (yych <= 0x00) goto yy13;
	if (yych == '/') goto yy15;
yy12:
#line 157 "ext/standard/url_parser_ex.re"
	{ c = m; goto path; }
#line 144 "ext/standard/url_parser_ex.c"
yy13:
	++c;
#line 156 "ext/standard/url_parser_ex.re"
	{ goto end; }
#line 149 "ext/standard/url_parser_ex.c"
yy15:
	yych = *++c;
	if (yych == '/') goto yy17;
	c = YYMARKER;
	goto yy12;
yy17:
	++c;
#line 158 "ext/standard/url_parser_ex.re"
	{
        goto userinfo;
      }
#line 161 "ext/standard/url_parser_ex.c"
}
#line 161 "ext/standard/url_parser_ex.re"


userinfo:
    m = c;
    if (rfcv == PHP_URL_PARSE_RFC3986) {
        
#line 170 "ext/standard/url_parser_ex.c"
{
	unsigned char yych;
	static const unsigned char yybm[] = {
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0, 128,   0,   0, 128,   0, 128, 128, 
		128, 128, 128, 128, 128, 128, 128,   0, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128,   0, 128,   0,   0, 
		  0, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128,   0,   0,   0,   0, 128, 
		  0, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128,   0,   0,   0, 128,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
	};
	yych = *(YYMARKER = c);
	if (yybm[0+yych] & 128) {
		goto yy24;
	}
	if (yych <= '%') {
		if (yych <= 0x00) goto yy22;
		if (yych >= '$') goto yy27;
	} else {
		if (yych == '@') goto yy28;
	}
yy21:
#line 168 "ext/standard/url_parser_ex.re"
	{ c = m; goto host; }
#line 220 "ext/standard/url_parser_ex.c"
yy22:
	++c;
#line 167 "ext/standard/url_parser_ex.re"
	{ goto end; }
#line 225 "ext/standard/url_parser_ex.c"
yy24:
	++c;
	yych = *c;
	if (yybm[0+yych] & 128) {
		goto yy24;
	}
	if (yych <= '#') goto yy26;
	if (yych <= '%') goto yy27;
	if (yych == '@') goto yy28;
yy26:
	c = YYMARKER;
	goto yy21;
yy27:
	++c;
	yych = *c;
	if (yych <= '@') {
		if (yych <= '/') goto yy26;
		if (yych <= '9') goto yy30;
		goto yy26;
	} else {
		if (yych <= 'F') goto yy30;
		if (yych <= '`') goto yy26;
		if (yych <= 'f') goto yy30;
		goto yy26;
	}
yy28:
	++c;
#line 169 "ext/standard/url_parser_ex.re"
	{
            get_token(ret->user, m, c - 1);
            goto host;
          }
#line 258 "ext/standard/url_parser_ex.c"
yy30:
	++c;
	yych = *c;
	if (yych <= '@') {
		if (yych <= '/') goto yy26;
		if (yych <= '9') goto yy24;
		goto yy26;
	} else {
		if (yych <= 'F') goto yy24;
		if (yych <= '`') goto yy26;
		if (yych <= 'f') goto yy24;
		goto yy26;
	}
}
#line 173 "ext/standard/url_parser_ex.re"

    } else {
        
#line 277 "ext/standard/url_parser_ex.c"
{
	unsigned char yych;
	static const unsigned char yybm[] = {
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0, 128,   0,   0, 128,   0, 128, 128, 
		128, 128, 128, 128, 128, 128, 128,   0, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128,   0, 128,   0,   0, 
		  0, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128,   0,   0,   0,   0, 128, 
		  0, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128,   0,   0,   0, 128,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
	};
	yych = *(YYMARKER = c);
	if (yybm[0+yych] & 128) {
		goto yy36;
	}
	if (yych <= 0xDF) {
		if (yych <= '?') {
			if (yych <= 0x00) goto yy34;
			if (yych <= '#') goto yy33;
			if (yych <= '%') goto yy39;
		} else {
			if (yych <= '@') goto yy40;
			if (yych <= 0xC1) goto yy33;
			if (yych <= 0xC2) goto yy42;
			goto yy43;
		}
	} else {
		if (yych <= 0xEE) {
			if (yych <= 0xE0) goto yy44;
			if (yych <= 0xEC) goto yy45;
			if (yych <= 0xED) goto yy46;
		} else {
			if (yych <= 0xF0) {
				if (yych <= 0xEF) goto yy47;
				goto yy48;
			} else {
				if (yych <= 0xF2) goto yy49;
				if (yych <= 0xF3) goto yy50;
			}
		}
	}
yy33:
#line 177 "ext/standard/url_parser_ex.re"
	{ c = m; goto host; }
#line 347 "ext/standard/url_parser_ex.c"
yy34:
	++c;
#line 176 "ext/standard/url_parser_ex.re"
	{ goto end; }
#line 352 "ext/standard/url_parser_ex.c"
yy36:
	++c;
	yych = *c;
	if (yybm[0+yych] & 128) {
		goto yy36;
	}
	if (yych <= 0xE0) {
		if (yych <= '@') {
			if (yych <= '#') goto yy38;
			if (yych <= '%') goto yy39;
			if (yych >= '@') goto yy40;
		} else {
			if (yych <= 0xC1) goto yy38;
			if (yych <= 0xC2) goto yy42;
			if (yych <= 0xDF) goto yy43;
			goto yy44;
		}
	} else {
		if (yych <= 0xEF) {
			if (yych <= 0xEC) goto yy45;
			if (yych <= 0xED) goto yy46;
			if (yych >= 0xEF) goto yy47;
		} else {
			if (yych <= 0xF0) goto yy48;
			if (yych <= 0xF2) goto yy49;
			if (yych <= 0xF3) goto yy50;
		}
	}
yy38:
	c = YYMARKER;
	goto yy33;
yy39:
	++c;
	yych = *c;
	if (yych <= '@') {
		if (yych <= '/') goto yy38;
		if (yych <= '9') goto yy51;
		goto yy38;
	} else {
		if (yych <= 'F') goto yy51;
		if (yych <= '`') goto yy38;
		if (yych <= 'f') goto yy51;
		goto yy38;
	}
yy40:
	++c;
#line 178 "ext/standard/url_parser_ex.re"
	{
            get_token(ret->user, m, c - 1);
            goto host;
          }
#line 404 "ext/standard/url_parser_ex.c"
yy42:
	++c;
	yych = *c;
	if (yych <= 0x9F) goto yy38;
	if (yych <= 0xBF) goto yy36;
	goto yy38;
yy43:
	++c;
	yych = *c;
	if (yych <= 0x7F) goto yy38;
	if (yych <= 0xBF) goto yy36;
	goto yy38;
yy44:
	++c;
	yych = *c;
	if (yych <= 0x9F) goto yy38;
	if (yych <= 0xBF) goto yy43;
	goto yy38;
yy45:
	++c;
	yych = *c;
	if (yych <= 0x7F) goto yy38;
	if (yych <= 0xBF) goto yy43;
	goto yy38;
yy46:
	++c;
	yych = *c;
	if (yych <= 0x7F) goto yy38;
	if (yych <= 0x9F) goto yy43;
	goto yy38;
yy47:
	++c;
	yych = *c;
	if (yych <= 0xB7) {
		if (yych <= 0xA3) goto yy38;
		if (yych <= 0xB6) goto yy43;
		goto yy52;
	} else {
		if (yych <= 0xBE) goto yy43;
		if (yych <= 0xBF) goto yy53;
		goto yy38;
	}
yy48:
	++c;
	yych = *c;
	if (yych <= 0xAE) {
		if (yych <= 0x8F) goto yy38;
		if (yych == 0x9F) goto yy54;
		goto yy45;
	} else {
		if (yych <= 0xAF) goto yy54;
		if (yych <= 0xBE) goto yy45;
		if (yych <= 0xBF) goto yy54;
		goto yy38;
	}
yy49:
	++c;
	yych = *c;
	if (yych <= 0x9F) {
		if (yych <= 0x8E) {
			if (yych <= 0x7F) goto yy38;
			goto yy45;
		} else {
			if (yych <= 0x8F) goto yy54;
			if (yych <= 0x9E) goto yy45;
			goto yy54;
		}
	} else {
		if (yych <= 0xAF) {
			if (yych <= 0xAE) goto yy45;
			goto yy54;
		} else {
			if (yych <= 0xBE) goto yy45;
			if (yych <= 0xBF) goto yy54;
			goto yy38;
		}
	}
yy50:
	++c;
	yych = *c;
	if (yych <= 0x9E) {
		if (yych <= 0x7F) goto yy38;
		if (yych == 0x8F) goto yy54;
		goto yy45;
	} else {
		if (yych <= 0xA0) {
			if (yych <= 0x9F) goto yy54;
			goto yy38;
		} else {
			if (yych <= 0xAE) goto yy45;
			if (yych <= 0xAF) goto yy54;
			goto yy38;
		}
	}
yy51:
	++c;
	yych = *c;
	if (yych <= '@') {
		if (yych <= '/') goto yy38;
		if (yych <= '9') goto yy36;
		goto yy38;
	} else {
		if (yych <= 'F') goto yy36;
		if (yych <= '`') goto yy38;
		if (yych <= 'f') goto yy36;
		goto yy38;
	}
yy52:
	++c;
	yych = *c;
	if (yych <= 0x7F) goto yy38;
	if (yych <= 0x8F) goto yy36;
	if (yych <= 0xAF) goto yy38;
	if (yych <= 0xBF) goto yy36;
	goto yy38;
yy53:
	++c;
	yych = *c;
	if (yych <= 0x7F) goto yy38;
	if (yych <= 0xAF) goto yy36;
	goto yy38;
yy54:
	++c;
	yych = *c;
	if (yych <= 0x7F) goto yy38;
	if (yych <= 0xBE) goto yy43;
	if (yych >= 0xC0) goto yy38;
	++c;
	yych = *c;
	if (yych <= 0x7F) goto yy38;
	if (yych <= 0xBD) goto yy36;
	goto yy38;
}
#line 182 "ext/standard/url_parser_ex.re"

    }

host:
    m = c;
    if (rfcv == PHP_URL_PARSE_RFC3986) {
        
#line 546 "ext/standard/url_parser_ex.c"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[] = {
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,  80,   0,   0,  80,   0,  80,  80, 
		 80,  80,  80,  80,  80,  80,  80,   0, 
		240, 240, 240, 240, 240, 240, 240, 240, 
		240, 240,  64,  80,   0,  80,   0,   0, 
		  0, 240, 240, 240, 240, 240, 240, 208, 
		208, 208, 208, 208, 208, 208, 208, 208, 
		208, 208, 208, 208, 208, 208, 208, 208, 
		208, 208, 208,   0,   0,   0,   0,  80, 
		  0, 240, 240, 240, 240, 240, 240, 208, 
		208, 208, 208, 208, 208, 208, 208, 208, 
		208, 208, 208, 208, 208, 208, 208, 208, 
		208, 208, 208,   0,   0,   0,  80,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
	};
	yych = *(YYMARKER = c);
	if (yybm[0+yych] & 16) {
		goto yy61;
	}
	if (yych <= '%') {
		if (yych <= 0x00) goto yy59;
		if (yych >= '$') goto yy64;
	} else {
		if (yych <= '@') goto yy58;
		if (yych <= '[') goto yy66;
	}
yy58:
#line 190 "ext/standard/url_parser_ex.re"
	{ c = m; goto path; }
#line 598 "ext/standard/url_parser_ex.c"
yy59:
	++c;
#line 189 "ext/standard/url_parser_ex.re"
	{ goto end; }
#line 603 "ext/standard/url_parser_ex.c"
yy61:
	yyaccept = 1;
	YYMARKER = ++c;
	yych = *c;
	if (yybm[0+yych] & 16) {
		goto yy61;
	}
	if (yych <= '#') goto yy63;
	if (yych <= '%') goto yy64;
yy63:
#line 191 "ext/standard/url_parser_ex.re"
	{
            get_token(ret->host, m, c);
            goto port;
          }
#line 619 "ext/standard/url_parser_ex.c"
yy64:
	++c;
	yych = *c;
	if (yych <= '@') {
		if (yych <= '/') goto yy65;
		if (yych <= '9') goto yy67;
	} else {
		if (yych <= 'F') goto yy67;
		if (yych <= '`') goto yy65;
		if (yych <= 'f') goto yy67;
	}
yy65:
	c = YYMARKER;
	if (yyaccept == 0) {
		goto yy58;
	} else {
		goto yy63;
	}
yy66:
	yych = *++c;
	if (yych <= 'F') {
		if (yych <= '9') {
			if (yych <= '/') goto yy65;
			goto yy68;
		} else {
			if (yych <= ':') goto yy69;
			if (yych <= '@') goto yy65;
			goto yy68;
		}
	} else {
		if (yych <= 'f') {
			if (yych <= '`') goto yy65;
			if (yych <= 'e') goto yy68;
			goto yy70;
		} else {
			if (yych == 'v') goto yy71;
			goto yy65;
		}
	}
yy67:
	++c;
	yych = *c;
	if (yych <= '@') {
		if (yych <= '/') goto yy65;
		if (yych <= '9') goto yy61;
		goto yy65;
	} else {
		if (yych <= 'F') goto yy61;
		if (yych <= '`') goto yy65;
		if (yych <= 'f') goto yy61;
		goto yy65;
	}
yy68:
	yych = *++c;
	if (yych <= '@') {
		if (yych <= '/') goto yy65;
		if (yych <= '9') goto yy72;
		if (yych <= ':') goto yy73;
		goto yy65;
	} else {
		if (yych <= 'F') goto yy72;
		if (yych <= '`') goto yy65;
		if (yych <= 'f') goto yy72;
		goto yy65;
	}
yy69:
	yych = *++c;
	if (yych == ':') goto yy74;
	goto yy65;
yy70:
	yych = *++c;
	if (yych <= 'F') {
		if (yych <= '9') {
			if (yych <= '/') goto yy65;
			goto yy72;
		} else {
			if (yych <= ':') goto yy73;
			if (yych <= '@') goto yy65;
			goto yy72;
		}
	} else {
		if (yych <= 'd') {
			if (yych <= '`') goto yy65;
			goto yy72;
		} else {
			if (yych <= 'e') goto yy75;
			if (yych <= 'f') goto yy72;
			goto yy65;
		}
	}
yy71:
	yych = *++c;
	if (yych == '.') goto yy65;
	goto yy77;
yy72:
	yych = *++c;
	if (yych <= '@') {
		if (yych <= '/') goto yy65;
		if (yych <= '9') goto yy78;
		if (yych >= ';') goto yy65;
	} else {
		if (yych <= 'F') goto yy78;
		if (yych <= '`') goto yy65;
		if (yych <= 'f') goto yy78;
		goto yy65;
	}
yy73:
	yych = *++c;
	if (yych <= '@') {
		if (yych <= '/') goto yy65;
		if (yych <= '9') goto yy79;
		if (yych <= ':') goto yy80;
		goto yy65;
	} else {
		if (yych <= 'F') goto yy79;
		if (yych <= '`') goto yy65;
		if (yych <= 'f') goto yy79;
		goto yy65;
	}
yy74:
	yych = *++c;
	if (yych <= '@') {
		if (yych <= '1') {
			if (yych <= '/') goto yy65;
			if (yych <= '0') goto yy81;
			goto yy82;
		} else {
			if (yych <= '2') goto yy83;
			if (yych <= '9') goto yy84;
			goto yy65;
		}
	} else {
		if (yych <= ']') {
			if (yych <= 'F') goto yy85;
			if (yych <= '\\') goto yy65;
			goto yy86;
		} else {
			if (yych <= '`') goto yy65;
			if (yych <= 'e') goto yy85;
			if (yych <= 'f') goto yy87;
